--- a/geo_measurements/templates/geo_measurement/main.html
+++ b/geo_measurements/templates/geo_measurement/main.html
@@ -1,12 +1,29 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
-
 {% block title %}
     calculate distance
 {% endblock title %}
-
-
 {% block content %}
+<!-- Button trigger modal -->
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Distance to destination {{ destination }} is : </h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+        {{ distance }} km.
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+        </div>
+    </div>
+    </div>
     {{ map | safe }}
     <form action="" method="POST" autocomplete="off">
         {% csrf_token %}
@@ -17,6 +34,13 @@
     <br>
     This product includes GeoLite2 data created by MaxMind, available from
     <a href="https://www.maxmind.com">https://www.maxmind.com</a>.
+    {% if request.POST and distance is not None %}
+    <script>
+        $(window).on('load',function(){
+            $('#exampleModal').modal('show')
+        });
+    </script>
+    {% endif %}
 {% endblock content %}
     
     
